<resources>
    <string name="app_name">Biometric Login</string>
    <string name="username_hint">phone number, email, or username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="already_signedin">You are now done with login. Move to your real MainActivity</string>

    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>

    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>
    <string name="cancel">Cancel</string>
    <string name="btn_authorize">Authorize</string>

    <string name="secret_key_name">biometric_sample_encryption_key</string>
</resources>