<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.EnableBiometricLoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enableBioTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/enable_biometric_login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enableBioDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding"
        android:text="@string/desc_biometrics_authorization"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enableBioTitleTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/enableBioUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding"
        android:hint="@string/username_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enableBioDescriptionTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/enableBioPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_padding"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enableBioUsernameEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enableBioCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_padding"
        android:text="@string/cancel"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/enableBioAuthorizeButton"
        app:layout_constraintTop_toBottomOf="@id/enableBioPasswordEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enableBioAuthorizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_padding"
        android:text="@string/btn_authorize"
        app:layout_constraintLeft_toRightOf="@+id/enableBioCancelButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enableBioPasswordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>